# dynaprompt

./: README.md  coqui_example.py  dpexample.py  example.db  example.py  pyproject.toml
assets/: example.mov
docs/: conf.py  index.rst  quickstart.rst
dynaprompt/: _Conversation.py  _Device.py  _DynaPrompt.py  _DynaPromptCommand.py  _DynaPromptCommandMode.py  _Message.py  _RawMessage.py  __init__.py  _get_database_sessionmaker.py
dynaprompt/devices/: _CLIDisplay.py  _CLIInput.py  __init__.py
dynaprompt/examples/: __init__.py  _chat.py  _openai_chat.py  _openai_chat_completion.py
dynaprompt/inputs/: _CLIInput.py  _DynaPrompt.py  _OpenAIChat.py  __init__.py
dynaprompt/outputs/: _CLIOutput.py  _TTSOutput.py  __init__.py
dynaprompt/utils/: __init__.py  _extract_match.py  _random_hash.py  _time_since_epoch_ms.py
tests/: test_DynaPrompt.py  test_say_hello.py  test_utils__extract_match.py
