# Replace every appearance of 'dynaprompt' with package name.

[tool.poetry]
name = "dynaprompt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.65.0"
"pytest" = { version = "^7.0.0", optional = true }
"pytest-cov" = { version = "^4.0.0", optional = true }
"black" = { version = "^22.3.0", optional = true }
"pre-commit" = { version = "^2.20.0", optional = true }
"ruff" = { version = "^0.0.200", optional = true }
"furo" = { version = "^2022.12.7", optional = true }
openai = "^0.27.2"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
click = "^8.1.3"

[tool.poetry.extras]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "pre-commit",
    "ruff",
    "furo"
]

[tool.poetry.scripts]
dpchat = "dynaprompt.examples:chat"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
# Ignore unused variables (for Pytest import checks).
ignore = ["F401"]

[tool.black]
line-length = 120
